All set up for books - HTTP requests working as it should.
